Implementacao Completa/front_end/y.output
Terminals unused in grammar

   STRING
   NEW_LINE


Grammar

    0 $accept: programa $end

    1 programa: BLOQ_DEFS def_funcs BLOQ_DEFS cham_funcs

    2 def_funcs: def_func ';' def_funcs
    3          | def_func ';'

    4 cham_funcs: cham_funcs cham_func ';'
    5           | cham_func ';'

    6 def_func: ID parametros '=' comando

    7 cham_func: ID '(' cham_paramentros ')'

    8 cham_paramentros: cham_paramentros ',' expressao
    9                 | expressao

   10 parametros: ID parametros
   11           | ID

   12 comando: expressao
   13        | IF '(' expressao ')' '{' comando '}' ELSE '{' comando '}'

   14 expressao: expressao '+' termo
   15          | expressao '-' termo
   16          | expressao '|' termo
   17          | HEAD termo
   18          | TAIL termo
   19          | expressao ':' termo
   20          | termo

   21 tipo_lista: '[' lista ']'
   22           | '[' ']'

   23 lista: expressao ',' lista
   24      | expressao

   25 termo: termo '*' exponente_comparacao
   26      | termo '/' exponente_comparacao
   27      | termo '&' exponente_comparacao
   28      | exponente_comparacao

   29 exponente_comparacao: exponente_comparacao '^' fator
   30                     | fator EQ fator
   31                     | fator '<' fator
   32                     | fator

   33 fator: '(' expressao ')'
   34      | elemento
   35      | cham_func

   36 elemento: NUMBER
   37         | ID
   38         | TRUE
   39         | FALSE
   40         | tipo_lista


Terminals, with rules where they appear

$end (0) 0
'&' (38) 27
'(' (40) 7 13 33
')' (41) 7 13 33
'*' (42) 25
'+' (43) 14
',' (44) 8 23
'-' (45) 15
'/' (47) 26
':' (58) 19
';' (59) 2 3 4 5
'<' (60) 31
'=' (61) 6
'[' (91) 21 22
']' (93) 21 22
'^' (94) 29
'{' (123) 13
'|' (124) 16
'}' (125) 13
error (256)
IF (258) 13
ELSE (259) 13
TAIL (260) 18
HEAD (261) 17
EQ (262) 30
NUMBER (263) 36
STRING (264)
ID (265) 6 7 10 11 37
NEW_LINE (266)
TRUE (267) 38
FALSE (268) 39
BLOQ_DEFS (269) 1


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
programa (34)
    on left: 1, on right: 0
def_funcs (35)
    on left: 2 3, on right: 1 2
cham_funcs (36)
    on left: 4 5, on right: 1 4
def_func (37)
    on left: 6, on right: 2 3
cham_func (38)
    on left: 7, on right: 4 5 35
cham_paramentros (39)
    on left: 8 9, on right: 7 8
parametros (40)
    on left: 10 11, on right: 6 10
comando (41)
    on left: 12 13, on right: 6 13
expressao (42)
    on left: 14 15 16 17 18 19 20, on right: 8 9 12 13 14 15 16 19
    23 24 33
tipo_lista (43)
    on left: 21 22, on right: 40
lista (44)
    on left: 23 24, on right: 21 23
termo (45)
    on left: 25 26 27 28, on right: 14 15 16 17 18 19 20 25 26 27
exponente_comparacao (46)
    on left: 29 30 31 32, on right: 25 26 27 28 29
fator (47)
    on left: 33 34 35, on right: 29 30 31 32
elemento (48)
    on left: 36 37 38 39 40, on right: 34


State 0

    0 $accept: . programa $end

    BLOQ_DEFS  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: BLOQ_DEFS . def_funcs BLOQ_DEFS cham_funcs

    ID  shift, and go to state 3

    def_funcs  go to state 4
    def_func   go to state 5


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 6


State 3

    6 def_func: ID . parametros '=' comando

    ID  shift, and go to state 7

    parametros  go to state 8


State 4

    1 programa: BLOQ_DEFS def_funcs . BLOQ_DEFS cham_funcs

    BLOQ_DEFS  shift, and go to state 9


State 5

    2 def_funcs: def_func . ';' def_funcs
    3          | def_func . ';'

    ';'  shift, and go to state 10


State 6

    0 $accept: programa $end .

    $default  accept


State 7

   10 parametros: ID . parametros
   11           | ID .

    ID  shift, and go to state 7

    $default  reduce using rule 11 (parametros)

    parametros  go to state 11


State 8

    6 def_func: ID parametros . '=' comando

    '='  shift, and go to state 12


State 9

    1 programa: BLOQ_DEFS def_funcs BLOQ_DEFS . cham_funcs

    ID  shift, and go to state 13

    cham_funcs  go to state 14
    cham_func   go to state 15


State 10

    2 def_funcs: def_func ';' . def_funcs
    3          | def_func ';' .

    ID  shift, and go to state 3

    $default  reduce using rule 3 (def_funcs)

    def_funcs  go to state 16
    def_func   go to state 5


State 11

   10 parametros: ID parametros .

    $default  reduce using rule 10 (parametros)


State 12

    6 def_func: ID parametros '=' . comando

    IF      shift, and go to state 17
    TAIL    shift, and go to state 18
    HEAD    shift, and go to state 19
    NUMBER  shift, and go to state 20
    ID      shift, and go to state 21
    TRUE    shift, and go to state 22
    FALSE   shift, and go to state 23
    '('     shift, and go to state 24
    '['     shift, and go to state 25

    cham_func             go to state 26
    comando               go to state 27
    expressao             go to state 28
    tipo_lista            go to state 29
    termo                 go to state 30
    exponente_comparacao  go to state 31
    fator                 go to state 32
    elemento              go to state 33


State 13

    7 cham_func: ID . '(' cham_paramentros ')'

    '('  shift, and go to state 34


State 14

    1 programa: BLOQ_DEFS def_funcs BLOQ_DEFS cham_funcs .
    4 cham_funcs: cham_funcs . cham_func ';'

    ID  shift, and go to state 13

    $default  reduce using rule 1 (programa)

    cham_func  go to state 35


State 15

    5 cham_funcs: cham_func . ';'

    ';'  shift, and go to state 36


State 16

    2 def_funcs: def_func ';' def_funcs .

    $default  reduce using rule 2 (def_funcs)


State 17

   13 comando: IF . '(' expressao ')' '{' comando '}' ELSE '{' comando '}'

    '('  shift, and go to state 37


State 18

   18 expressao: TAIL . termo

    NUMBER  shift, and go to state 20
    ID      shift, and go to state 21
    TRUE    shift, and go to state 22
    FALSE   shift, and go to state 23
    '('     shift, and go to state 24
    '['     shift, and go to state 25

    cham_func             go to state 26
    tipo_lista            go to state 29
    termo                 go to state 38
    exponente_comparacao  go to state 31
    fator                 go to state 32
    elemento              go to state 33


State 19

   17 expressao: HEAD . termo

    NUMBER  shift, and go to state 20
    ID      shift, and go to state 21
    TRUE    shift, and go to state 22
    FALSE   shift, and go to state 23
    '('     shift, and go to state 24
    '['     shift, and go to state 25

    cham_func             go to state 26
    tipo_lista            go to state 29
    termo                 go to state 39
    exponente_comparacao  go to state 31
    fator                 go to state 32
    elemento              go to state 33


State 20

   36 elemento: NUMBER .

    $default  reduce using rule 36 (elemento)


State 21

    7 cham_func: ID . '(' cham_paramentros ')'
   37 elemento: ID .

    '('  shift, and go to state 34

    $default  reduce using rule 37 (elemento)


State 22

   38 elemento: TRUE .

    $default  reduce using rule 38 (elemento)


State 23

   39 elemento: FALSE .

    $default  reduce using rule 39 (elemento)


State 24

   33 fator: '(' . expressao ')'

    TAIL    shift, and go to state 18
    HEAD    shift, and go to state 19
    NUMBER  shift, and go to state 20
    ID      shift, and go to state 21
    TRUE    shift, and go to state 22
    FALSE   shift, and go to state 23
    '('     shift, and go to state 24
    '['     shift, and go to state 25

    cham_func             go to state 26
    expressao             go to state 40
    tipo_lista            go to state 29
    termo                 go to state 30
    exponente_comparacao  go to state 31
    fator                 go to state 32
    elemento              go to state 33


State 25

   21 tipo_lista: '[' . lista ']'
   22           | '[' . ']'

    TAIL    shift, and go to state 18
    HEAD    shift, and go to state 19
    NUMBER  shift, and go to state 20
    ID      shift, and go to state 21
    TRUE    shift, and go to state 22
    FALSE   shift, and go to state 23
    '('     shift, and go to state 24
    '['     shift, and go to state 25
    ']'     shift, and go to state 41

    cham_func             go to state 26
    expressao             go to state 42
    tipo_lista            go to state 29
    lista                 go to state 43
    termo                 go to state 30
    exponente_comparacao  go to state 31
    fator                 go to state 32
    elemento              go to state 33


State 26

   35 fator: cham_func .

    $default  reduce using rule 35 (fator)


State 27

    6 def_func: ID parametros '=' comando .

    $default  reduce using rule 6 (def_func)


State 28

   12 comando: expressao .
   14 expressao: expressao . '+' termo
   15          | expressao . '-' termo
   16          | expressao . '|' termo
   19          | expressao . ':' termo

    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '|'  shift, and go to state 46
    ':'  shift, and go to state 47

    $default  reduce using rule 12 (comando)


State 29

   40 elemento: tipo_lista .

    $default  reduce using rule 40 (elemento)


State 30

   20 expressao: termo .
   25 termo: termo . '*' exponente_comparacao
   26      | termo . '/' exponente_comparacao
   27      | termo . '&' exponente_comparacao

    '*'  shift, and go to state 48
    '/'  shift, and go to state 49
    '&'  shift, and go to state 50

    $default  reduce using rule 20 (expressao)


State 31

   28 termo: exponente_comparacao .
   29 exponente_comparacao: exponente_comparacao . '^' fator

    '^'  shift, and go to state 51

    $default  reduce using rule 28 (termo)


State 32

   30 exponente_comparacao: fator . EQ fator
   31                     | fator . '<' fator
   32                     | fator .

    EQ   shift, and go to state 52
    '<'  shift, and go to state 53

    $default  reduce using rule 32 (exponente_comparacao)


State 33

   34 fator: elemento .

    $default  reduce using rule 34 (fator)


State 34

    7 cham_func: ID '(' . cham_paramentros ')'

    TAIL    shift, and go to state 18
    HEAD    shift, and go to state 19
    NUMBER  shift, and go to state 20
    ID      shift, and go to state 21
    TRUE    shift, and go to state 22
    FALSE   shift, and go to state 23
    '('     shift, and go to state 24
    '['     shift, and go to state 25

    cham_func             go to state 26
    cham_paramentros      go to state 54
    expressao             go to state 55
    tipo_lista            go to state 29
    termo                 go to state 30
    exponente_comparacao  go to state 31
    fator                 go to state 32
    elemento              go to state 33


State 35

    4 cham_funcs: cham_funcs cham_func . ';'

    ';'  shift, and go to state 56


State 36

    5 cham_funcs: cham_func ';' .

    $default  reduce using rule 5 (cham_funcs)


State 37

   13 comando: IF '(' . expressao ')' '{' comando '}' ELSE '{' comando '}'

    TAIL    shift, and go to state 18
    HEAD    shift, and go to state 19
    NUMBER  shift, and go to state 20
    ID      shift, and go to state 21
    TRUE    shift, and go to state 22
    FALSE   shift, and go to state 23
    '('     shift, and go to state 24
    '['     shift, and go to state 25

    cham_func             go to state 26
    expressao             go to state 57
    tipo_lista            go to state 29
    termo                 go to state 30
    exponente_comparacao  go to state 31
    fator                 go to state 32
    elemento              go to state 33


State 38

   18 expressao: TAIL termo .
   25 termo: termo . '*' exponente_comparacao
   26      | termo . '/' exponente_comparacao
   27      | termo . '&' exponente_comparacao

    '*'  shift, and go to state 48
    '/'  shift, and go to state 49
    '&'  shift, and go to state 50

    $default  reduce using rule 18 (expressao)


State 39

   17 expressao: HEAD termo .
   25 termo: termo . '*' exponente_comparacao
   26      | termo . '/' exponente_comparacao
   27      | termo . '&' exponente_comparacao

    '*'  shift, and go to state 48
    '/'  shift, and go to state 49
    '&'  shift, and go to state 50

    $default  reduce using rule 17 (expressao)


State 40

   14 expressao: expressao . '+' termo
   15          | expressao . '-' termo
   16          | expressao . '|' termo
   19          | expressao . ':' termo
   33 fator: '(' expressao . ')'

    ')'  shift, and go to state 58
    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '|'  shift, and go to state 46
    ':'  shift, and go to state 47


State 41

   22 tipo_lista: '[' ']' .

    $default  reduce using rule 22 (tipo_lista)


State 42

   14 expressao: expressao . '+' termo
   15          | expressao . '-' termo
   16          | expressao . '|' termo
   19          | expressao . ':' termo
   23 lista: expressao . ',' lista
   24      | expressao .

    ','  shift, and go to state 59
    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '|'  shift, and go to state 46
    ':'  shift, and go to state 47

    $default  reduce using rule 24 (lista)


State 43

   21 tipo_lista: '[' lista . ']'

    ']'  shift, and go to state 60


State 44

   14 expressao: expressao '+' . termo

    NUMBER  shift, and go to state 20
    ID      shift, and go to state 21
    TRUE    shift, and go to state 22
    FALSE   shift, and go to state 23
    '('     shift, and go to state 24
    '['     shift, and go to state 25

    cham_func             go to state 26
    tipo_lista            go to state 29
    termo                 go to state 61
    exponente_comparacao  go to state 31
    fator                 go to state 32
    elemento              go to state 33


State 45

   15 expressao: expressao '-' . termo

    NUMBER  shift, and go to state 20
    ID      shift, and go to state 21
    TRUE    shift, and go to state 22
    FALSE   shift, and go to state 23
    '('     shift, and go to state 24
    '['     shift, and go to state 25

    cham_func             go to state 26
    tipo_lista            go to state 29
    termo                 go to state 62
    exponente_comparacao  go to state 31
    fator                 go to state 32
    elemento              go to state 33


State 46

   16 expressao: expressao '|' . termo

    NUMBER  shift, and go to state 20
    ID      shift, and go to state 21
    TRUE    shift, and go to state 22
    FALSE   shift, and go to state 23
    '('     shift, and go to state 24
    '['     shift, and go to state 25

    cham_func             go to state 26
    tipo_lista            go to state 29
    termo                 go to state 63
    exponente_comparacao  go to state 31
    fator                 go to state 32
    elemento              go to state 33


State 47

   19 expressao: expressao ':' . termo

    NUMBER  shift, and go to state 20
    ID      shift, and go to state 21
    TRUE    shift, and go to state 22
    FALSE   shift, and go to state 23
    '('     shift, and go to state 24
    '['     shift, and go to state 25

    cham_func             go to state 26
    tipo_lista            go to state 29
    termo                 go to state 64
    exponente_comparacao  go to state 31
    fator                 go to state 32
    elemento              go to state 33


State 48

   25 termo: termo '*' . exponente_comparacao

    NUMBER  shift, and go to state 20
    ID      shift, and go to state 21
    TRUE    shift, and go to state 22
    FALSE   shift, and go to state 23
    '('     shift, and go to state 24
    '['     shift, and go to state 25

    cham_func             go to state 26
    tipo_lista            go to state 29
    exponente_comparacao  go to state 65
    fator                 go to state 32
    elemento              go to state 33


State 49

   26 termo: termo '/' . exponente_comparacao

    NUMBER  shift, and go to state 20
    ID      shift, and go to state 21
    TRUE    shift, and go to state 22
    FALSE   shift, and go to state 23
    '('     shift, and go to state 24
    '['     shift, and go to state 25

    cham_func             go to state 26
    tipo_lista            go to state 29
    exponente_comparacao  go to state 66
    fator                 go to state 32
    elemento              go to state 33


State 50

   27 termo: termo '&' . exponente_comparacao

    NUMBER  shift, and go to state 20
    ID      shift, and go to state 21
    TRUE    shift, and go to state 22
    FALSE   shift, and go to state 23
    '('     shift, and go to state 24
    '['     shift, and go to state 25

    cham_func             go to state 26
    tipo_lista            go to state 29
    exponente_comparacao  go to state 67
    fator                 go to state 32
    elemento              go to state 33


State 51

   29 exponente_comparacao: exponente_comparacao '^' . fator

    NUMBER  shift, and go to state 20
    ID      shift, and go to state 21
    TRUE    shift, and go to state 22
    FALSE   shift, and go to state 23
    '('     shift, and go to state 24
    '['     shift, and go to state 25

    cham_func   go to state 26
    tipo_lista  go to state 29
    fator       go to state 68
    elemento    go to state 33


State 52

   30 exponente_comparacao: fator EQ . fator

    NUMBER  shift, and go to state 20
    ID      shift, and go to state 21
    TRUE    shift, and go to state 22
    FALSE   shift, and go to state 23
    '('     shift, and go to state 24
    '['     shift, and go to state 25

    cham_func   go to state 26
    tipo_lista  go to state 29
    fator       go to state 69
    elemento    go to state 33


State 53

   31 exponente_comparacao: fator '<' . fator

    NUMBER  shift, and go to state 20
    ID      shift, and go to state 21
    TRUE    shift, and go to state 22
    FALSE   shift, and go to state 23
    '('     shift, and go to state 24
    '['     shift, and go to state 25

    cham_func   go to state 26
    tipo_lista  go to state 29
    fator       go to state 70
    elemento    go to state 33


State 54

    7 cham_func: ID '(' cham_paramentros . ')'
    8 cham_paramentros: cham_paramentros . ',' expressao

    ')'  shift, and go to state 71
    ','  shift, and go to state 72


State 55

    9 cham_paramentros: expressao .
   14 expressao: expressao . '+' termo
   15          | expressao . '-' termo
   16          | expressao . '|' termo
   19          | expressao . ':' termo

    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '|'  shift, and go to state 46
    ':'  shift, and go to state 47

    $default  reduce using rule 9 (cham_paramentros)


State 56

    4 cham_funcs: cham_funcs cham_func ';' .

    $default  reduce using rule 4 (cham_funcs)


State 57

   13 comando: IF '(' expressao . ')' '{' comando '}' ELSE '{' comando '}'
   14 expressao: expressao . '+' termo
   15          | expressao . '-' termo
   16          | expressao . '|' termo
   19          | expressao . ':' termo

    ')'  shift, and go to state 73
    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '|'  shift, and go to state 46
    ':'  shift, and go to state 47


State 58

   33 fator: '(' expressao ')' .

    $default  reduce using rule 33 (fator)


State 59

   23 lista: expressao ',' . lista

    TAIL    shift, and go to state 18
    HEAD    shift, and go to state 19
    NUMBER  shift, and go to state 20
    ID      shift, and go to state 21
    TRUE    shift, and go to state 22
    FALSE   shift, and go to state 23
    '('     shift, and go to state 24
    '['     shift, and go to state 25

    cham_func             go to state 26
    expressao             go to state 42
    tipo_lista            go to state 29
    lista                 go to state 74
    termo                 go to state 30
    exponente_comparacao  go to state 31
    fator                 go to state 32
    elemento              go to state 33


State 60

   21 tipo_lista: '[' lista ']' .

    $default  reduce using rule 21 (tipo_lista)


State 61

   14 expressao: expressao '+' termo .
   25 termo: termo . '*' exponente_comparacao
   26      | termo . '/' exponente_comparacao
   27      | termo . '&' exponente_comparacao

    '*'  shift, and go to state 48
    '/'  shift, and go to state 49
    '&'  shift, and go to state 50

    $default  reduce using rule 14 (expressao)


State 62

   15 expressao: expressao '-' termo .
   25 termo: termo . '*' exponente_comparacao
   26      | termo . '/' exponente_comparacao
   27      | termo . '&' exponente_comparacao

    '*'  shift, and go to state 48
    '/'  shift, and go to state 49
    '&'  shift, and go to state 50

    $default  reduce using rule 15 (expressao)


State 63

   16 expressao: expressao '|' termo .
   25 termo: termo . '*' exponente_comparacao
   26      | termo . '/' exponente_comparacao
   27      | termo . '&' exponente_comparacao

    '*'  shift, and go to state 48
    '/'  shift, and go to state 49
    '&'  shift, and go to state 50

    $default  reduce using rule 16 (expressao)


State 64

   19 expressao: expressao ':' termo .
   25 termo: termo . '*' exponente_comparacao
   26      | termo . '/' exponente_comparacao
   27      | termo . '&' exponente_comparacao

    '*'  shift, and go to state 48
    '/'  shift, and go to state 49
    '&'  shift, and go to state 50

    $default  reduce using rule 19 (expressao)


State 65

   25 termo: termo '*' exponente_comparacao .
   29 exponente_comparacao: exponente_comparacao . '^' fator

    '^'  shift, and go to state 51

    $default  reduce using rule 25 (termo)


State 66

   26 termo: termo '/' exponente_comparacao .
   29 exponente_comparacao: exponente_comparacao . '^' fator

    '^'  shift, and go to state 51

    $default  reduce using rule 26 (termo)


State 67

   27 termo: termo '&' exponente_comparacao .
   29 exponente_comparacao: exponente_comparacao . '^' fator

    '^'  shift, and go to state 51

    $default  reduce using rule 27 (termo)


State 68

   29 exponente_comparacao: exponente_comparacao '^' fator .

    $default  reduce using rule 29 (exponente_comparacao)


State 69

   30 exponente_comparacao: fator EQ fator .

    $default  reduce using rule 30 (exponente_comparacao)


State 70

   31 exponente_comparacao: fator '<' fator .

    $default  reduce using rule 31 (exponente_comparacao)


State 71

    7 cham_func: ID '(' cham_paramentros ')' .

    $default  reduce using rule 7 (cham_func)


State 72

    8 cham_paramentros: cham_paramentros ',' . expressao

    TAIL    shift, and go to state 18
    HEAD    shift, and go to state 19
    NUMBER  shift, and go to state 20
    ID      shift, and go to state 21
    TRUE    shift, and go to state 22
    FALSE   shift, and go to state 23
    '('     shift, and go to state 24
    '['     shift, and go to state 25

    cham_func             go to state 26
    expressao             go to state 75
    tipo_lista            go to state 29
    termo                 go to state 30
    exponente_comparacao  go to state 31
    fator                 go to state 32
    elemento              go to state 33


State 73

   13 comando: IF '(' expressao ')' . '{' comando '}' ELSE '{' comando '}'

    '{'  shift, and go to state 76


State 74
